RESOLVED FIXED265889
[WebGPU] Using fp16 as an override value will crash
https://bugs.webkit.org/show_bug.cgi?id=265889
Summary [WebGPU] Using fp16 as an override value will crash
Mike Wyrzykowski
Reported 2023-12-05 10:39:00 PST
[WebGPU] Using fp16 as an override value will crash
Attachments
Radar WebKit Bug Importer
Comment 1 2023-12-05 10:39:32 PST
Mike Wyrzykowski
Comment 2 2023-12-05 10:53:50 PST
EWS
Comment 3 2023-12-05 15:32:23 PST
Committed 271576@main (bf377f517c58): <https://commits.webkit.org/271576@main> Reviewed commits have been landed. Closing PR #21346 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.