[WebGPU] Using fp16 as an override value will crash https://bugs.webkit.org/show_bug.cgi?id=265889 <radar://119199267>

Reviewed by Dan Glastonbury.

std::get crashes if ConstantValue contained a WGSL::half,
add support for WGSL::half for override values.

* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::RewriteGlobalVariables::usesOverride):
* Source/WebGPU/WGSL/WGSL.h:
* Source/WebGPU/WebGPU/Pipeline.mm:
(WebGPU::createConstantValues):

Canonical link: https://commits.webkit.org/271576@main